--- a/dispatch/templates/dispatch/bus_print.html
+++ b/dispatch/templates/dispatch/bus_print.html
@@ -1,1 +1,114 @@
-bs
+{% load dispatch_custom_tags %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>TRP</title>
+    <link href="{% static 'css/dispatch/bus_print.css' %}" rel="stylesheet" type="text/css" />
+    <link href="" id="printSizeCss" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+    <div class="busPrintContainer">
+        <div class="pageTitle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span>배차지시서 (호수별)</span>
+        </div>
+        <div class="headerCell">
+            <div>차량번호</div>
+            <div>기사명</div>
+            <div>출근</div>
+            <div>업무</div>
+            <div>퇴근</div>
+        </div>
+        
+        <div class="tableBorder">
+            <table class="contentsCell">
+                <tbody>
+                    {% for vehicle in vehicle_list %}
+                    <tr class="{{vehicle.id}}">
+                        <td>{{vehicle.vehicle_num}}</td>
+                        <td>{{vehicle.driver_name}}</td>
+                        {% with e_connect=e_connect_object|obj:vehicle.id %}
+                        {% with connect=connect_object|obj:vehicle.id %}
+                        {% with c_connect=c_connect_object|obj:vehicle.id %}
+                        <td>
+                            {% for con in e_connect %}
+                                {% if forloop.counter != 1 %},{% endif %}
+                                ({{con.departure_date|slice:"11:"}}) [{{con.regularly_id.departure}} ▶ {{con.regularly_id.arrival}}]
+                                {% if con.regularly_id.references %} -- ({{con.regularly_id.references}}) {% endif %}
+                            {% endfor %}
+                        </td>
+                        
+                        <td>
+                            {% for con in connect %}
+                                {% if forloop.counter != 1 %},{% endif %}
+                                {% if date != con.departure_date|slice:":10" %} {% endif %}
+                                ({{con.departure_date|slice:"11:"}}) [{{con.order_id.departure}} ▶ {{con.order_id.arrival}}]
+                                {% if con.order_id.references %} -- ({{con.order_id.references}}) {% endif %}
+                            {% endfor %}
+                        </td>
+                        
+                        <td>
+                            {% for con in c_connect %}
+                                {% if forloop.counter != 1 %},{% endif %}
+                                ({{con.departure_date|slice:"11:"}}) [{{con.regularly_id.departure}} ▶ {{con.regularly_id.arrival}}]
+                                {% if con.regularly_id.references %} -- ({{con.regularly_id.references}}) {% endif %}
+                            {% endfor %}
+                        </td>
+                        {% endwith %}
+                        {% endwith %}
+                        {% endwith %}
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <!-- {% for vehicle in vehicle_list %}
+        <div class="contentsCell">
+            <div>{{vehicle.vehicle_num}}</div>
+            <div>{{vehicle.driver_name}}</div>
+            {% with e_connect=e_connect_object|obj:vehicle.id %}
+            {% with connect=connect_object|obj:vehicle.id %}
+            {% with c_connect=c_connect_object|obj:vehicle.id %}
+            <div>
+                {% for con in e_connect %}
+                {% if forloop.counter != 1 %},{% endif %}
+                ({{con.departure_date|slice:"11:"}}) [{{con.regularly_id.departure}} ▶ {{con.regularly_id.arrival}}]
+                {% if con.regularly_id.references %} -- ({{con.regularly_id.references}}) {% endif %}
+                {% endfor %}
+            </div>
+
+            <div>
+                {% for con in connect %}
+                {% if forloop.counter != 1 %},{% endif %}
+                {% if date != con.departure_date|slice:":10" %} {% endif %}
+                ({{con.departure_date|slice:"11:"}}) [{{con.order_id.departure}} ▶ {{con.order_id.arrival}}]
+                {% if con.order_id.references %} -- ({{con.order_id.references}}) {% endif %}
+                {% endfor %}
+            </div>
+
+            <div>
+                {% for con in c_connect %}
+                {% if forloop.counter != 1 %},{% endif %}
+                ({{con.departure_date|slice:"11:"}}) [{{con.regularly_id.departure}} ▶ {{con.regularly_id.arrival}}]
+                {% if con.regularly_id.references %} -- ({{con.regularly_id.references}}) {% endif %}
+                {% endfor %}
+            </div>
+            {% endwith %}
+            {% endwith %}
+            {% endwith %}
+        </div>
+        {% endfor %} -->
+    </div>
+</body>
+
+<script src="{% static 'js/dispatch/bus_Print.js' %}"></script>
+
+</html>
