--- a/dispatch/templates/dispatch/line_print.html
+++ b/dispatch/templates/dispatch/line_print.html
@@ -1,1 +1,56 @@
-line
+{% load dispatch_custom_tags %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>TRP</title>
+    <link href="{% static 'css/dispatch/line_print.css' %}" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+    <div class="lineContainer">
+        <div class="pageTitle">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span>노선별 배차지시서</span>
+        </div>
+        <div class="lineContentsArea">
+            {% for regularly in regularly_list %}
+            {% with cnt=forloop.counter0 %}            
+            <ul class="lineContentsBox">
+                {% for r in regularly %}
+                {% if forloop.counter == 1 %} <li class="lineContentsTitle">{{cnt|add:1}}. {{r.group.name}}</li> {% endif %}
+                <li class="lineContentsCell">
+                    <span>■</span>
+                    <b class="lineTime">[{{r.departure_time}}]</b>[{{r.number}}] <b>{{r.departure}} ▶ {{r.arrival}}</b> ---
+                    {% with connects=connect_list|index:cnt %}
+                    {% with this_connect=connects|index:forloop.counter0 %}
+                    ({% for connect in this_connect %}{% if forloop.counter != 1 %}, {% endif %}{{connect.bus_id.vehicle_num}}-{{connect.driver_id.name}}{% endfor %})
+                    {% if r.references %} ({{r.references}}) {% endif %}
+                    {% endwith %}
+                    {% endwith %}
+                </li>
+                {% endfor %}
+            </ul>
+            {% endwith %}
+            {% endfor %}
+            <ul class="lineContentsBox">
+                <li class="lineContentsTitle">■ 미지정된 출,퇴근</li>
+                {% for r in no_list %}
+                <li class="lineContentsCell">
+                    [{{r.number}}] {{r.departure}} ▶ {{r.arrival}}
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    </div>
+</body>
+
+<script src="{% static 'js/dispatch/line_print.js' %}"></script>
+
+</html>
