--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -19,8 +19,8 @@
     {% csrf_token %}
     <div class="creteHeader">
       <div class="inputCell">
-        <span class="inputName" required>제목</span>
-        <input type="text" name="title">
+        <span class="inputName">제목</span>
+        <input type="text" name="title" required>
       </div>
       <div class="inputCell">
         <span class="inputName">구분</span>
