--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -366,7 +366,7 @@
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">상여금 선지급</span>
                 <div class="checkingCell">
-                    <input name="payment_method" type="checkbox" id="bonus" value="y">
+                    <input name="payment_method" value="y" type="checkbox" id="bonus">
                     <label for="bonus">선지급</label>
                 </div>
             </div>
@@ -585,14 +585,14 @@
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">상여금 선지급</span>
                 <div class="checkingCell routeOrderPaymentMethod">
-                    <input name="payment_method" value="y" type="checkbox" id="bonusS">
+                    <input name="payment_method" type="checkbox" value="y" id="bonusS">
                     <label for="bonusS">선지급</label>
                 </div>
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">VAT포함</span>
                 <div class="checkingCell routeOrderVat">
-                    <input name="VAT" value="y" type="checkbox" id="vatS">
+                    <input name="VAT"  type="checkbox" value="y" id="vatS">
                     <label for="vatS">포함</label>
                 </div>
             </div>
