--- a/notice/templates/notice/edit.html
+++ b/notice/templates/notice/edit.html
@@ -17,8 +17,8 @@
     {% csrf_token %}
     <div class="creteHeader">
       <div class="inputCell">
-        <span class="inputName" required>제목</span>
-        <input type="text" name="title" value="{{ notice.title }}">
+        <span class="inputName">제목</span>
+        <input type="text" name="title" value="{{ notice.title }}" required>
       </div>
       <div class="inputCell">
         <span class="inputName">구분</span>
