--- a/static/css/base.css
+++ b/static/css/base.css
@@ -574,3 +574,36 @@ html::-webkit-scrollbar-track {
 .HomePopupContainer .editBtn {
   background-color: #0069D9;
 }
+
+.homePopupBtnBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 4.8rem;
+  padding: 0 13.4rem;
+  box-sizing: border-box;
+}
+.HomePopupContainerPw .homePopupBtnBox{
+  padding: 0 11.4rem;
+}
+.HomeCloseBtn{
+  background-color: #444444;
+}
+.HomeEditBtn{
+  background-color: #0069D9;
+}
+.homePopupTitle{  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4.8rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+  border-bottom: 0.1rem solid #191919;
+}
+.HomePopupDataTitle{  
+  font-size: 1.4rem;
+  color: #7A7A7A;
+}
