--- a/static/css/dispatch/regularlyRoute.css
+++ b/static/css/dispatch/regularlyRoute.css
@@ -167,11 +167,13 @@ td:nth-child(2) {
 }
 
 td:nth-child(3) {
-  width: 5%;
+  display: flex;
+  justify-content: center;
+  width: 6%;
 }
 
 td:nth-child(4) {
-  width: 30%;
+  width: 29%;
 }
 
 tbody td:nth-child(4) {
@@ -590,6 +592,7 @@ td:nth-child(8) {
 }
 
 .routePopupDataCell input[type=text],
+.routePopupDataCell input[type=number],
 .routePopupDataCell input[type=date],
 .routePopupDataCell input[type=time],
 .routePopupDataCell select {
