--- a/static/css/vehicle/list.css
+++ b/static/css/vehicle/list.css
@@ -112,7 +112,9 @@ td:nth-child(4) {
 }
 
 td:nth-child(5) {
-    width: 8%;
+    display: flex;
+    justify-content: center;
+    width: 6%;
 }
 
 td:nth-child(6) {
@@ -124,11 +126,11 @@ td:nth-child(7) {
 }
 
 td:nth-child(8) {
-    width: 16%;
+    width: 17%;
 }
 
 td:nth-child(9) {
-    width: 16%;
+    width: 17%;
 }
 
 .btnBox input {
